fix the img issue

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/img/logo.png">
+    <link rel="icon" href="img/logo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="css/portfolio.css">
     <title>MyPortfolio</title>
@@ -34,7 +34,7 @@
         </div>
         <div class="desk-head">
             <figure>
-                <img src="/img/logo.png" alt="logo" width="85" height="85">
+                <img src="img/logo.png" alt="logo" width="85" height="85">
             </figure>
             <nav>
                 <ul>
@@ -62,7 +62,7 @@
                     </p>
                 </div>
                 <div class="bitmoji">
-                    <img src="/img/preview (2).png" alt="hey 👋" width="200" height="200">
+                    <img src="img/preview (2).png" alt="hey 👋" width="200" height="200">
                 </div>
             </div>
 
@@ -78,7 +78,7 @@
                 <h1>ABOUT ME </h1>
                 <div class="about-mid">
                     <figure>
-                        <img src="/img/about.jpg" alt="nahom Abraham" width="200" height="auto">
+                        <img src="img/about.jpg" alt="nahom Abraham" width="200" height="auto">
                     </figure>
                     <div class="resume">
                         <a href="resume.pdf" download>
@@ -147,31 +147,31 @@
                 </a>
                 <a href="https://github.com/voidrak/Currency_Convert_JAVA">
                     <figure>
-                        <img src="/img/currency-convertpng.png" alt="currency">
+                        <img src="img/currency-convertpng.png" alt="currency">
                         <figcaption>Currency Converter Using C++</figcaption>
                     </figure>
                 </a>
                 <a href="https://github.com/voidrak/Student_Managment_Java">
                     <figure>
-                        <img src="/img/student-man.png" alt="student management">
+                        <img src="img/student-man.png" alt="student management">
                         <figcaption> Student Management System Using java</figcaption>
                     </figure>
                 </a>
                 <a href="https://github.com/voidrak/SImple_CL_Tic_Tac_Toe">
                     <figure>
-                        <img src="/img/tic tac toe.png" alt="tic tac">
+                        <img src="img/tic tac toe.png" alt="tic tac">
                         <figcaption>Tic Tac Toe Game Using Java</figcaption>
                     </figure>
                 </a>
                 <a href="https://github.com/voidrak/SImple_CL_Tic_Tac_Toe">
                     <figure>
-                        <img src="/img/tic tac toe.png" alt="tic tac">
+                        <img src="img/tic tac toe.png" alt="tic tac">
                         <figcaption>Tic Tac Toe Game Using Java</figcaption>
                     </figure>
                 </a>
                 <a href="https://github.com/voidrak/SImple_CL_Tic_Tac_Toe">
                     <figure>
-                        <img src="/img/tic tac toe.png" alt="tic tac">
+                        <img src="img/tic tac toe.png" alt="tic tac">
                         <figcaption>Tic Tac Toe Game Using Java</figcaption>
                     </figure>
                 </a>
