--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <li><a href="#about">About</a></li>
                         <li><a href="#project">Projects</a></li>
                         <li><a href="#">Skills</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="#contacts">Contact</a></li>
                     </ul>
                 </nav>
             </div>
@@ -40,7 +40,7 @@
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#">Projects</a></li>
+                    <li><a href="#project">Projects</a></li>
                     <li><a href="#">Skills</a></li>
                     <li><a href="#" class="contact">Contact </a></li>
                 </ul>
@@ -177,7 +177,7 @@
                 </a>
             </div>
         </div>
-        <section id="contact">
+        <section id="contacts">
 
             <div class="contact-us">
                 <h1>Contact Us</h1>
