fix resume for moblie

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     </figure>
                     <div class="resume">
                         <a href="resume.pdf" download>
-                            <p>Download Resume</p>
+                            <p> Resume</p>
                         </a>
                     </div>
                 </div>
