--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     </figure>
                     <div class="resume">
                         <a href="resume.pdf" download>
-                            <p> Resume</p>
+                            Resume
                         </a>
                     </div>
                 </div>
