--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <p>
                     I am software engineer student in kombolcha institute of technology. I am mostly self taught with
                     developer good
-                    formal eduction foundation.As a seasoned software engineer, I am passionate about crafting
+                    formal education foundation.As a seasoned software engineer, I am passionate about crafting
                     exceptional
                     web designs that are both innovative and user-friendly. I thrive on the thrill of exploring new
                     technologies and techniques to create cutting-edge software applications that exceed client
@@ -222,6 +222,7 @@
 
 
     </main>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
