some minor improvement

--- a/index.html
+++ b/index.html
@@ -139,42 +139,55 @@
         <div class="third-main">
             <h1 id="project">Projects</h1>
             <div class="project">
+
+                <a href="https://github.com/voidrak/quiz-game-">
+                    <figure>
+                        <img src="img\screenshot444 (1).png" alt="portfolio">
+                        <figcaption>My Personal Portfolio </figcaption>
+                    </figure>
+                </a>
+
+                <a href="https://github.com/voidrak/quiz-game-">
+                    <figure>
+                        <img src="img/calculate.png" alt="quiz">
+                        <figcaption>Simple Web-based Calculator </figcaption>
+                    </figure>
+                </a>
                 <a href="https://github.com/voidrak/quiz-game-">
                     <figure>
                         <img src="img/quiz-game.png" alt="quiz">
                         <figcaption>Simple C++ Quiz Game </figcaption>
                     </figure>
                 </a>
+                <a href="https://github.com/voidrak/quiz-game-">
+                    <figure>
+                        <img src="img/quiz-game.png" alt="quiz">
+                        <figcaption>Simple C++ Quiz Game </figcaption>
+                    </figure>
+                </a>
+
                 <a href="https://github.com/voidrak/Currency_Convert_JAVA">
                     <figure>
                         <img src="img/currency-convertpng.png" alt="currency">
                         <figcaption>Currency Converter Using C++</figcaption>
                     </figure>
                 </a>
+
                 <a href="https://github.com/voidrak/Student_Managment_Java">
                     <figure>
                         <img src="img/student-man.png" alt="student management">
                         <figcaption> Student Management System Using java</figcaption>
                     </figure>
                 </a>
+
                 <a href="https://github.com/voidrak/SImple_CL_Tic_Tac_Toe">
                     <figure>
                         <img src="img/tic tac toe.png" alt="tic tac">
                         <figcaption>Tic Tac Toe Game Using Java</figcaption>
                     </figure>
                 </a>
-                <a href="https://github.com/voidrak/SImple_CL_Tic_Tac_Toe">
-                    <figure>
-                        <img src="img/tic tac toe.png" alt="tic tac">
-                        <figcaption>Tic Tac Toe Game Using Java</figcaption>
-                    </figure>
-                </a>
-                <a href="https://github.com/voidrak/SImple_CL_Tic_Tac_Toe">
-                    <figure>
-                        <img src="img/tic tac toe.png" alt="tic tac">
-                        <figcaption>Tic Tac Toe Game Using Java</figcaption>
-                    </figure>
-                </a>
+
+
             </div>
         </div>
         <section id="contacts">
@@ -212,7 +225,7 @@
                         <p>Your Message</p>
                         <textarea name="Message" id="Message" cols="10" rows="5"></textarea>
                         <br>
-                        <button type="submit">Submit</button>
+                        <button id="submit-el" type="submit">Submit</button>
                     </form>
                 </div>
             </div>
