update the project section

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 </a>
                 <a href="https://github.com/voidrak/quiz-game-">
                     <figure>
-                        <img src="img/quiz-game.png" alt="quiz">
+                        <img src="img/RakSky.png" alt="quiz">
                         <figcaption>Simple C++ Quiz Game </figcaption>
                     </figure>
                 </a>
