--- a/index.html
+++ b/index.html
@@ -138,55 +138,73 @@
 
         <div class="third-main">
             <h1 id="project">Projects</h1>
-            <div class="project">
+            <div class="project-container">
 
-                <a href="https://github.com/voidrak/quiz-game-">
-                    <figure>
-                        <img src="img\screenshot444 (1).png" alt="portfolio">
-                        <figcaption>My Personal Portfolio </figcaption>
-                    </figure>
-                </a>
+                <div class="left-col ">
 
-                <a href="https://github.com/voidrak/quiz-game-">
-                    <figure>
-                        <img src="img/calculate.png" alt="quiz">
-                        <figcaption>Simple Web-based Calculator </figcaption>
-                    </figure>
-                </a>
-                <a href="https://github.com/voidrak/quiz-game-">
-                    <figure>
-                        <img src="img/RakSky.png" alt="quiz">
-                        <figcaption>Simple C++ Quiz Game </figcaption>
-                    </figure>
-                </a>
-                <a href="https://github.com/voidrak/quiz-game-">
-                    <figure>
-                        <img src="img/quiz-game.png" alt="quiz">
-                        <figcaption>Simple C++ Quiz Game </figcaption>
-                    </figure>
-                </a>
+                    <div class="all-project ">
+                        <img src="img/portofolio.png" alt="">
+                        <h2>A Personal Portfolio</h2>
+                        <div class="project-details">
+                            <div class="github btn"><a href="https://github.com/voidrak/voidrak.github.io"
+                                    target="_blank" rel="noopener noreferrer">Code</a></div>
+                            <div class="live btn"><a href="https://voidrak.github.io/" target="_blank"
+                                    rel="noopener noreferrer">live Demo</a>
+                            </div>
+                        </div>
+                    </div>
 
-                <a href="https://github.com/voidrak/Currency_Convert_JAVA">
-                    <figure>
-                        <img src="img/currency-convertpng.png" alt="currency">
-                        <figcaption>Currency Converter Using C++</figcaption>
-                    </figure>
-                </a>
 
-                <a href="https://github.com/voidrak/Student_Managment_Java">
-                    <figure>
-                        <img src="img/student-man.png" alt="student management">
-                        <figcaption> Student Management System Using java</figcaption>
-                    </figure>
-                </a>
+                    <div class="all-project ">
+                        <img src="img/reciperak.png" alt="">
+                        <h2>RecipeRAk- A Recipe App</h2>
+                        <div class="project-details">
+                            <div class="github btn"><a href="https://github.com/voidrak/RecipeRak" target="_blank"
+                                    rel="noopener noreferrer">Code</a></div>
+                            <div class="live btn"><a href="https://reciperak.netlify.app/" target="_blank"
+                                    rel="noopener noreferrer">live Demo</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="all-project ">
+                        <img src="img/quiz-app.png" alt="">
+                        <h2>C++ Trivial Quiz </h2>
+                        <div class="project-details">
+                            <div class="github btn"><a href="https://github.com/voidrak/quiz-game-" target="_blank"
+                                    rel="noopener noreferrer">Code</a></div>
+                            <!-- <div class="live btn"><a href="http://" target="_blank" rel="noopener noreferrer">live Demo</a></div> -->
+                        </div>
+                    </div>
 
-                <a href="https://github.com/voidrak/SImple_CL_Tic_Tac_Toe">
-                    <figure>
-                        <img src="img/tic tac toe.png" alt="tic tac">
-                        <figcaption>Tic Tac Toe Game Using Java</figcaption>
-                    </figure>
-                </a>
+                </div>
 
+                <div class="right-col ">
+
+
+
+                    <div class="all-project ">
+                        <img src="img/RakSky.png" alt="">
+                        <h2>RakSky-Weather App</h2>
+                        <div class="project-details">
+                            <div class="github btn"><a href="https://github.com/voidrak/RakSky" target="_blank"
+                                    rel="noopener noreferrer">Code</a></div>
+                            <div class="live btn"><a href="https://raksky.netlify.app/" target="_blank"
+                                    rel="noopener noreferrer">live Demo</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="all-project ">
+                        <img src="img/RakCalculator.png">
+                        <h2>RakCalculator- Simple Calculator </h2>
+                        <div class=" project-details">
+                            <div class="github btn"><a href="" target="_blank" rel="noopener noreferrer">Code</a></div>
+                            <div class="live btn"><a href="https://rakcalcualtor.netlify.app/" target="_blank"
+                                    rel="noopener noreferrer">live Demo</a>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
 
             </div>
         </div>
