update the projects

--- a/index.html
+++ b/index.html
@@ -116,13 +116,13 @@
                     <p>My layouts will work on any device, big or small.</p>
                 </div>
 
-                <div class="intuitive icon-outer">
+                <!-- <div class="intuitive icon-outer">
                     <div class="intuitive-icon icon-inner">
                         <i class="fa-solid fa-fire-flame-curved"></i>
                     </div>
                     <h1>Intuitive</h1>
                     <p>Strong preference for easy to use, intuitive UX/UI.</p>
-                </div>
+                </div> -->
 
                 <div class="dynamic icon-outer">
                     <div class="dynamic-icon icon-inner">
@@ -194,10 +194,22 @@
                         </div>
                     </div>
                     <div class="all-project ">
+                        <img src="img/foucsburst.png">
+                        <h2>FocusBurst-A Pomodoro App </h2>
+                        <div class=" project-details">
+                            <div class="github btn"><a href="https://github.com/voidrak/FocusBurst" target="_blank"
+                                    rel="noopener noreferrer">Code</a></div>
+                            <div class="live btn"><a href="https://focusburst.netlify.app/" target="_blank"
+                                    rel="noopener noreferrer">live Demo</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="all-project ">
                         <img src="img/RakCalculator.png">
                         <h2>RakCalculator- Simple Calculator </h2>
                         <div class=" project-details">
-                            <div class="github btn"><a href="" target="_blank" rel="noopener noreferrer">Code</a></div>
+                            <div class="github btn"><a href="https://github.com/voidrak/Rak-Web-Calculator"
+                                    target="_blank" rel="noopener noreferrer">Code</a></div>
                             <div class="live btn"><a href="https://rakcalcualtor.netlify.app/" target="_blank"
                                     rel="noopener noreferrer">live Demo</a>
                             </div>
