made some changes

--- a/index.html
+++ b/index.html
@@ -77,46 +77,47 @@
             <div class="about" id="about">
                 <h1>ABOUT ME </h1>
                 <div class="about-mid">
-                    <figure>
+                    <!-- <figure>
                         <img src="img/about.jpg" alt="nahom Abraham" width="200" height="auto">
-                    </figure>
-                    <div class="resume">
+                    </figure> -->
+                    <!-- <div class="resume">
                         <a href="resume.pdf" download>
                             Resume
-                        </a>
-                    </div>
+                        </a> -->
                 </div>
-                <p>
-                    I am software engineer student in kombolcha institute of technology. I am mostly self taught with
-                    developer good
-                    formal education foundation.As a seasoned software engineer, I am passionate about crafting
-                    exceptional
-                    web designs that are both innovative and user-friendly. I thrive on the thrill of exploring new
-                    technologies and techniques to create cutting-edge software applications that exceed client
-                    expectations. My commitment to continuous learning and improvement ensures that I stay ahead in this
-                    rapidly evolving field.
-                </p>
             </div>
 
-            <div class="shapes">
+            <p>
+                I am software engineer student in kombolcha institute of technology. I am mostly self taught with
+                developer good
+                formal education foundation.As a seasoned software engineer, I am passionate about crafting
+                exceptional
+                web designs that are both innovative and user-friendly. I thrive on the thrill of exploring new
+                technologies and techniques to create cutting-edge software applications that exceed client
+                expectations. My commitment to continuous learning and improvement ensures that I stay ahead in this
+                rapidly evolving field.
+            </p>
+        </div>
 
-                <div class="fast icon-outer">
-                    <div class="fast-icon icon-inner">
-                        <i class="fa-solid fa-gauge-high"></i>
-                    </div>
-                    <h1>Fast</h1>
-                    <p>Fast load times and lag free interaction, my highest priority.</p>
+        <div class="shapes">
+
+            <div class="fast icon-outer">
+                <div class="fast-icon icon-inner">
+                    <i class="fa-solid fa-gauge-high"></i>
                 </div>
+                <h1>Fast</h1>
+                <p>Fast load times and lag free interaction, my highest priority.</p>
+            </div>
 
-                <div class="responsive icon-outer">
-                    <div class="responsive-icon icon-inner">
-                        <i class="fa-solid fa-mobile-screen"></i>
-                    </div>
-                    <h1>Responsive</h1>
-                    <p>My layouts will work on any device, big or small.</p>
+            <div class="responsive icon-outer">
+                <div class="responsive-icon icon-inner">
+                    <i class="fa-solid fa-mobile-screen"></i>
                 </div>
+                <h1>Responsive</h1>
+                <p>My layouts will work on any device, big or small.</p>
+            </div>
 
-                <!-- <div class="intuitive icon-outer">
+            <!-- <div class="intuitive icon-outer">
                     <div class="intuitive-icon icon-inner">
                         <i class="fa-solid fa-fire-flame-curved"></i>
                     </div>
@@ -124,15 +125,15 @@
                     <p>Strong preference for easy to use, intuitive UX/UI.</p>
                 </div> -->
 
-                <div class="dynamic icon-outer">
-                    <div class="dynamic-icon icon-inner">
-                        <i class="fa-solid fa-rocket"></i>
-                    </div>
-                    <h1>Dynamic</h1>
-                    <p>Websites don't have to be static, I love making pages come to life.</p>
+            <div class="dynamic icon-outer">
+                <div class="dynamic-icon icon-inner">
+                    <i class="fa-solid fa-rocket"></i>
                 </div>
-
+                <h1>Dynamic</h1>
+                <p>Websites don't have to be static, I love making pages come to life.</p>
             </div>
+
+        </div>
 
         </div>
 
