add to project list

--- a/index.html
+++ b/index.html
@@ -157,23 +157,25 @@
 
 
                     <div class="all-project ">
-                        <img src="img/reciperak.png" alt="">
-                        <h2>RecipeRAk- A Recipe App</h2>
+                        <img src="img/monstercat.png" alt="">
+                        <h2>Monstercat -Website Clone</h2>
                         <div class="project-details">
-                            <div class="github btn"><a href="https://github.com/voidrak/RecipeRak" target="_blank"
-                                    rel="noopener noreferrer">Code</a></div>
-                            <div class="live btn"><a href="https://reciperak.netlify.app/" target="_blank"
+                            <div class="github btn"><a href="https://github.com/voidrak/Monstercat-Clone"
+                                    target="_blank" rel="noopener noreferrer">Code</a></div>
+                            <div class="live btn"><a href="https://monstercat-clone-voidrak.vercel.app/" target="_blank"
                                     rel="noopener noreferrer">live Demo</a>
                             </div>
                         </div>
                     </div>
                     <div class="all-project ">
-                        <img src="img/quiz-app.png" alt="">
-                        <h2>C++ Trivial Quiz </h2>
+                        <img src="img/abstract.png" alt="">
+                        <h2>Abstract - Website Clone </h2>
                         <div class="project-details">
-                            <div class="github btn"><a href="https://github.com/voidrak/quiz-game-" target="_blank"
+                            <div class="github btn"><a href="https://github.com/voidrak/Abstract-Clone" target="_blank"
                                     rel="noopener noreferrer">Code</a></div>
-                            <!-- <div class="live btn"><a href="http://" target="_blank" rel="noopener noreferrer">live Demo</a></div> -->
+                            <div class="live btn"><a href="https://abstract-clone-woad.vercel.app/" target="_blank"
+                                    rel="noopener noreferrer">live
+                                    Demo</a></div>
                         </div>
                     </div>
 
@@ -206,12 +208,12 @@
                         </div>
                     </div>
                     <div class="all-project ">
-                        <img src="img/RakCalculator.png">
-                        <h2>RakCalculator- Simple Calculator </h2>
-                        <div class=" project-details">
-                            <div class="github btn"><a href="https://github.com/voidrak/Rak-Web-Calculator"
-                                    target="_blank" rel="noopener noreferrer">Code</a></div>
-                            <div class="live btn"><a href="https://rakcalcualtor.netlify.app/" target="_blank"
+                        <img src="img/reciperak.png" alt="">
+                        <h2>RecipeRAk- A Recipe App</h2>
+                        <div class="project-details">
+                            <div class="github btn"><a href="https://github.com/voidrak/RecipeRak" target="_blank"
+                                    rel="noopener noreferrer">Code</a></div>
+                            <div class="live btn"><a href="https://reciperak.netlify.app/" target="_blank"
                                     rel="noopener noreferrer">live Demo</a>
                             </div>
                         </div>
