--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
             </div>
 
             <p>
-                I am software engineer student in kombolcha institute of technology. I am mostly self taught with
-                developer good
+                I am software engineer student in kombolcha institute of technology. I am mostly self taught
+                developer with good
                 formal education foundation.As a seasoned software engineer, I am passionate about crafting
                 exceptional
                 web designs that are both innovative and user-friendly. I thrive on the thrill of exploring new
