--- a/index.html
+++ b/index.html
@@ -168,24 +168,6 @@
                         </div>
                     </div>
                     <div class="all-project ">
-                        <img src="img/abstract.png" alt="">
-                        <h2>Abstract - Website Clone </h2>
-                        <div class="project-details">
-                            <div class="github btn"><a href="https://github.com/voidrak/Abstract-Clone" target="_blank"
-                                    rel="noopener noreferrer">Code</a></div>
-                            <div class="live btn"><a href="https://abstract-clone-woad.vercel.app/" target="_blank"
-                                    rel="noopener noreferrer">live
-                                    Demo</a></div>
-                        </div>
-                    </div>
-
-                </div>
-
-                <div class="right-col ">
-
-
-
-                    <div class="all-project ">
                         <img src="img/RakSky.png" alt="">
                         <h2>RakSky-Weather App</h2>
                         <div class="project-details">
@@ -194,6 +176,26 @@
                             <div class="live btn"><a href="https://raksky.netlify.app/" target="_blank"
                                     rel="noopener noreferrer">live Demo</a>
                             </div>
+                        </div>
+                    </div>
+
+
+                </div>
+
+                <div class="right-col ">
+
+
+
+
+                    <div class="all-project ">
+                        <img src="img/abstract.png" alt="">
+                        <h2>Abstract - Website Clone </h2>
+                        <div class="project-details">
+                            <div class="github btn"><a href="https://github.com/voidrak/Abstract-Clone" target="_blank"
+                                    rel="noopener noreferrer">Code</a></div>
+                            <div class="live btn"><a href="https://abstract-clone-woad.vercel.app/" target="_blank"
+                                    rel="noopener noreferrer">live
+                                    Demo</a></div>
                         </div>
                     </div>
                     <div class="all-project ">
@@ -242,10 +244,14 @@
                         <li><i class="fa-solid fa-phone-volume"><a href="tel:+251940973991">+251940973991</a></i></li>
                     </ul>
                     <div class="logo-social">
-                        <a href="https://twitter.com/home"><i class="fa-brands fa-twitter"></i></a>
-                        <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
-                        <a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin"></i></a>
-                        <a href="https://github.com/voidrak"><i class="fa-brands fa-github"></i></a>
+                        <a href="https://twitter.com/home" rel="noopener noreferrer" target="_blank"><i
+                                class="fa-brands fa-twitter"></i></a>
+                        <a href="https://www.instagram.com/" rel="noopener noreferrer" target="_blank"><i
+                                class="fa-brands fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/" rel="noopener noreferrer" target="_blank"><i
+                                class="fa-brands fa-linkedin"></i></a>
+                        <a href="https://github.com/voidrak" rel="noopener noreferrer" target="_blank"><i
+                                class="fa-brands fa-github"></i></a>
                     </div>
                 </div>
 
