add new projects

--- a/index.html
+++ b/index.html
@@ -167,17 +167,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="all-project ">
-                        <img src="img/RakSky.png" alt="">
-                        <h2>RakSky-Weather App</h2>
-                        <div class="project-details">
-                            <div class="github btn"><a href="https://github.com/voidrak/RakSky" target="_blank"
-                                    rel="noopener noreferrer">Code</a></div>
-                            <div class="live btn"><a href="https://raksky.netlify.app/" target="_blank"
-                                    rel="noopener noreferrer">live Demo</a>
-                            </div>
-                        </div>
-                    </div>
+
 
 
                 </div>
@@ -185,7 +175,17 @@
                 <div class="right-col ">
 
 
-
+                    <div class="all-project ">
+                        <img src="img/visitethiopia.png" alt="">
+                        <h2>Visit Ethiopia </h2>
+                        <div class="project-details">
+                            <div class="github btn"><a href="https://github.com/voidrak/Vist-Ethiopia" target="_blank"
+                                    rel="noopener noreferrer">Code</a></div>
+                            <div class="live btn"><a href="https://vist-ethiopia.vercel.app/" target="_blank"
+                                    rel="noopener noreferrer">live Demo</a>
+                            </div>
+                        </div>
+                    </div>
 
                     <div class="all-project ">
                         <img src="img/abstract.png" alt="">
@@ -209,17 +209,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="all-project ">
-                        <img src="img/reciperak.png" alt="">
-                        <h2>RecipeRAk- A Recipe App</h2>
-                        <div class="project-details">
-                            <div class="github btn"><a href="https://github.com/voidrak/RecipeRak" target="_blank"
-                                    rel="noopener noreferrer">Code</a></div>
-                            <div class="live btn"><a href="https://reciperak.netlify.app/" target="_blank"
-                                    rel="noopener noreferrer">live Demo</a>
-                            </div>
-                        </div>
-                    </div>
+
 
                 </div>
 
