--- a/index.html
+++ b/index.html
@@ -157,6 +157,17 @@
 
 
                     <div class="all-project ">
+                        <img src="img/ethioflix.png" alt="">
+                        <h2>ETHIOFLIX - Ethiopian Movie Site</h2>
+                        <div class="project-details">
+                            <div class="github btn"><a href="https://github.com/voidrak/EthioFlix" target="_blank"
+                                    rel="noopener noreferrer">Code</a></div>
+                            <div class="live btn"><a href="https://ethioflixx.vercel.app/" target="_blank"
+                                    rel="noopener noreferrer">live Demo</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="all-project ">
                         <img src="img/monstercat.png" alt="">
                         <h2>Monstercat -Website Clone</h2>
                         <div class="project-details">
