made some improvement and add new project

--- a/index.html
+++ b/index.html
@@ -54,15 +54,15 @@
                 <div class="myname">
                     <p>Hi I'm </p>
                     <p><span class="nowrap">Nahom Abraham</span> </p>
-                    <p>You can call me <span class="rak">RAK</span> </p>
-                    <p>I am a software engineer with a passion
+                    <p class="small-p">You can call me <span class="rak">RAK</span> </p>
+                    <p class="small-p">I am a software engineer with a passion
                         for creating innovative and user-friendly
                         websites and apps
 
                     </p>
                 </div>
                 <div class="bitmoji">
-                    <img src="img/preview (2).png" alt="hey 👋" width="200" height="200">
+                    <img src=" img/astronaut_with_laptop.png " alt="hey 👋">
                 </div>
             </div>
 
@@ -187,6 +187,17 @@
 
 
                     <div class="all-project ">
+                        <img src="img/soder_store_screenshot_3.png">
+                        <h2>Sodere-Store </h2>
+                        <div class=" project-details">
+                            <div class="github btn"><a href="https://github.com/voidrak/Sodere-Store" target="_blank"
+                                    rel="noopener noreferrer">Code</a></div>
+                            <div class="live btn"><a href="https://sodere-store.vercel.app/" target="_blank"
+                                    rel="noopener noreferrer">live Demo</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="all-project ">
                         <img src="img/visitethiopia.png" alt="">
                         <h2>Visit Ethiopia </h2>
                         <div class="project-details">
@@ -207,17 +218,6 @@
                             <div class="live btn"><a href="https://abstract-clone-woad.vercel.app/" target="_blank"
                                     rel="noopener noreferrer">live
                                     Demo</a></div>
-                        </div>
-                    </div>
-                    <div class="all-project ">
-                        <img src="img/foucsburst.png">
-                        <h2>FocusBurst-A Pomodoro App </h2>
-                        <div class=" project-details">
-                            <div class="github btn"><a href="https://github.com/voidrak/FocusBurst" target="_blank"
-                                    rel="noopener noreferrer">Code</a></div>
-                            <div class="live btn"><a href="https://focusburst.netlify.app/" target="_blank"
-                                    rel="noopener noreferrer">live Demo</a>
-                            </div>
                         </div>
                     </div>
 
