edit the broken link on visit ethiopia website

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                         <div class="project-details">
                             <div class="github btn"><a href="https://github.com/voidrak/Vist-Ethiopia" target="_blank"
                                     rel="noopener noreferrer">Code</a></div>
-                            <div class="live btn"><a href="https://vist-ethiopia.vercel.app/" target="_blank"
+                            <div class="live btn"><a href="https://visit-ethio.vercel.app/" target="_blank"
                                     rel="noopener noreferrer">live Demo</a>
                             </div>
                         </div>
