Update portfolio styles and content in index.html

--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@
                 <div class="left-col ">
 
                     <div class="all-project ">
-                        <img src="img/portofolio.png" alt="">
-                        <h2>A Personal Portfolio</h2>
+                        <img src="img/portfolioV2.png" alt="">
+                        <h2>Current Portfolio</h2>
                         <div class="project-details">
-                            <div class="github btn"><a href="https://github.com/voidrak/voidrak.github.io"
-                                    target="_blank" rel="noopener noreferrer">Code</a></div>
+                            <div class="github btn"><a href="https://github.com/voidrak/Portfolio_V2" target="_blank"
+                                    rel="noopener noreferrer">Code</a></div>
                             <div class="live btn"><a href="https://voidrak.github.io/" target="_blank"
                                     rel="noopener noreferrer">live Demo</a>
                             </div>
